<resources>
    <string name="app_name">RescueU_2_1</string>
    <string name="registrieren">registrieren</string>
    <string name="Benutzername">Benutzername</string>
    <string name="passwort">passwort</string>
    <string name="login">login</string>
    <string name="settingsBtn">settingsBtn</string>
    <string name="notfall">Notfall</string>
    <string name="map">Map</string>
    <string name="unsicher">Unsicher</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Polizei">Polizei</string>
    <string name="Arzt">Arzt</string>
    <string name="Feuerwehr">Feuerwehr</string>
    <string name="Notfallkontakt">Notfallkontakt</string>
    <string name="Welcome">Willkommen</string>
    <string name="Speichern">Speichern</string>
    <string name="Phone">Phone</string>
    <string name="notfallkontakt">Notfallkontakt</string>
    <string name="name">Name</string>
    <string name="Vorname">Vorname</string>
    <string name="Nachname">Nachname</string>
    <string name="Notfallkontaktnummer">Notfallkontakt Nummer</string>
    <string name="NotfallkontaktName">Notfallkontakt Name</string>
    <string name="settingsTelephon">Telefonnummer</string>
    <string name="Pin_Eingeben">Bitte Pin eingeben</string>
    <string name="berfall">Überfall</string>
    <string name="einbruch">Einbruch</string>
    <string name="schl_gerei">Schlägerei</string>
    <string name="notruf_senden">Notruf senden</string>
    <string name="weitere_angaben">Weitere Angaben</string>
    <string name="polizei_notruf_sms">Polizei Notruf SMS</string>
    <string name="alarm_deaktivieren">Alarm Deaktivieren</string>
    <string name="panikbutton">Panikbutton</string>
</resources>
