<?xml version="1.0" encoding="UTF-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PolizeiAuswahlActivity">

    <Switch android:layout_height="28dp" android:layout_width="45dp" app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="220dp" android:layout_marginTop="22dp" android:id="@+id/switch1"/>

    <Switch android:layout_height="28dp" android:layout_width="45dp" app:layout_constraintTop_toBottomOf="@+id/switch1" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="220dp" android:layout_marginTop="20dp" android:id="@+id/switch2"/>

    <Switch android:layout_height="28dp" android:layout_width="45dp" app:layout_constraintTop_toBottomOf="@+id/switch2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="220dp" android:layout_marginTop="20dp" android:id="@+id/switch3"/>

    <TextView android:layout_height="28dp" android:layout_width="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginTop="25dp" android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:text="@string/berfall" android:layout_marginStart="20dp"/>

    <TextView android:layout_height="28dp" android:layout_width="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="20dp" android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:text="@string/einbruch" android:layout_marginStart="20dp"/>

    <TextView android:layout_height="25dp" android:layout_width="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="20dp" android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent" android:text="@string/schl_gerei" android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/polizeiSenden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="sendBtn"
        android:text="@string/notruf_senden"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/customText"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:accessibilityLiveRegion="polite"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/weitere_angaben"
        android:inputType="textMultiLine"
        android:lines="1"
        android:maxLines="6"
        android:minLines="1"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginTop="20dp" android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent" android:text="@string/polizei_notruf_sms" android:layout_marginStart="20dp" app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>