<?xml version="1.0" encoding="UTF-8"?>

    <android.support.constraint.ConstraintLayout tools:context=".settingsActivity" android:background="@color/colorPrimary" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Vorname -->


    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorPrimaryText" android:inputType="text" android:hint="@string/Vorname" android:ems="10" android:layout_marginTop="32dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/setting_vorname"/>

    <!-- Nachname -->


    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorPrimaryText" android:inputType="text" android:hint="@string/Nachname" android:ems="10" android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/setting_name" app:layout_constraintTop_toBottomOf="@+id/setting_vorname" app:layout_constraintHorizontal_bias="0.503"/>

    <!-- Phone Nummer -->


    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorPrimaryText" android:inputType="phone" android:hint="@string/settingsTelephon" android:ems="10" android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/setting_phone" app:layout_constraintTop_toBottomOf="@+id/setting_name" app:layout_constraintHorizontal_bias="0.503"/>

    <!-- Notfall Kontakt Nummer -->


    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorPrimaryText" android:inputType="phone" android:hint="@string/Notfallkontaktnummer" android:ems="10" android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/setting_notKontakt" app:layout_constraintTop_toBottomOf="@+id/setting_phone" app:layout_constraintHorizontal_bias="0.503"/>

    <!-- Handycap/Krankheit -->


    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:inputType="text" android:hint="Krankheit/Handycap" android:ems="10" android:layout_marginTop="8dp" android:id="@+id/setting_handycap" app:layout_constraintTop_toBottomOf="@+id/setting_notKontakt" app:layout_constraintHorizontal_bias="0.502"/>

    <!-- Medikamente -->


    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:inputType="text" android:hint="Medikamente" android:ems="10" android:layout_marginTop="8dp" android:id="@+id/setting_medikamente" app:layout_constraintTop_toBottomOf="@+id/setting_handycap" app:layout_constraintHorizontal_bias="0.502"/>

    <!-- Notfall Pin -->


    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:inputType="text" android:hint="Notfall Pin" android:ems="10" android:layout_marginTop="8dp" android:id="@+id/setting_notPin" app:layout_constraintTop_toBottomOf="@+id/setting_medikamente" app:layout_constraintHorizontal_bias="0.502"/>

    <!-- Save all -->


    <Button android:background="@drawable/round_button" android:layout_height="wrap_content" android:layout_width="250dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorTextIcons" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:id="@+id/savebtn" app:layout_constraintBottom_toBottomOf="parent" android:text="@string/Speichern" android:onClick="saveBtn" android:layout_marginBottom="24dp"/>

</android.support.constraint.ConstraintLayout>